@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-01-20 [B] Fixed display of 'optional information' header on register form (thread ID 63338) {eenemeenemuu}
 2010-01-20 [C] Centered film strip thumbnails (thread ID 63320) {eenemeenemuu}
 2010-01-20 [B] Fixed film strip jump label for lastcom meta album {eenemeenemuu}
 2010-01-20 [C] Added title and alt attributes to ajax loaded film strip thumbnails (thread ID 63321) {eenemeenemuu}
